--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header Content</header>
+    <section>
+        Main Mmage
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social links here
+    </footer>
 </body>
 </html>
