--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
             <ul>
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        Main Mmage
+        Main Image
     </section>
     <section>
         Club Ethos
